--- a/WindowsUIWalla/ManageWalla/WallaStyleDictionary.xaml
+++ b/WindowsUIWalla/ManageWalla/WallaStyleDictionary.xaml
@@ -582,6 +582,7 @@
     <Style TargetType="{x:Type TextBox}" >
         <Setter Property="Background" Value="{StaticResource EntryControlBackgroundBrush}" />
         <Setter Property="Foreground" Value="{StaticResource FontBorderBrush}" />
+        <Setter Property="FontSize" Value="16" />
         <Setter Property="TextAlignment" Value="Left" />
         <Setter Property="Cursor" Value="IBeam" />
         <Style.Triggers>
